Fix spacing below the feature menu.

--- a/scss/unimelb.scss
+++ b/scss/unimelb.scss
@@ -108,11 +108,6 @@ table {
   }
 }
 
-/* Hmm... */
-.wrapper .feature {
-  margin-bottom: -10px;
-}
-
 /* Feature menu */
 #feature-menu {
   margin-left: 0px;
